Added alias target FreeType::FreeType.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,3 +188,8 @@ include_directories(
 add_definitions( -DFT2_BUILD_LIBRARY )
 
 add_library( ${PROJECT_NAME} STATIC ${${PROJECT_NAME}_HEADERS} ${${PROJECT_NAME}_SOURCES} )
+
+add_library( ${PROJECT_NAME}::${PROJECT_NAME}
+	ALIAS
+		${PROJECT_NAME}
+)
